data/issues_nolabel/nolabel_test_560.txt
Syntax error when building with python3

i followed the instructions to install Tensorflow from sources. However, before finishing the installation of the wheel with pip3 a SyntaxError: invalid syntax comes up. The error doesn't abort the installation, but when i'm trying to import Tensorflow it shows this error:
 >>> import tensorflow as tf
 I tensorflow/stream_executor/dso_loader.cc:101] successfully opened CUDA library   libcublas.so.7.0 locally
I tensorflow/stream_executor/dso_loader.cc:101] successfully opened CUDA library libcudnn.so.6.5 locally
I tensorflow/stream_executor/dso_loader.cc:101] successfully opened CUDA library libcufft.so.7.0 locally
I tensorflow/stream_executor/dso_loader.cc:101] successfully opened CUDA library libcuda.so locally
I tensorflow/stream_executor/dso_loader.cc:101] successfully opened CUDA library libcurand.so.7.0 locally
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/usr/local/lib/python3.4/dist-packages/tensorflow/__init__.py", line 23, in <module>
    from tensorflow.python import *
  File "/usr/local/lib/python3.4/dist-packages/tensorflow/python/__init__.py", line 67, in <module>
    from tensorflow.python.training import training as train
  File "/usr/local/lib/python3.4/dist-packages/tensorflow/python/training/training.py", line 141, in      <module>
    from tensorflow.python.training.coordinator import Coordinator
  File "/usr/local/lib/python3.4/dist-packages/tensorflow/python/training/coordinator.py", line 201
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

with python 2.7 it shows no such error and it works fine... it seems that the sources are not compatible with python3.4.
i'm running on Ubuntu 14.04 with python 3.4.3 and GCC 4.8.4.